style.css
body {
    margin: 20px;
    background-color: white;
}

h1 {
    text-align: left;
    font-family: semplicitapro, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 30pt;
    margin-top: 0px;
    margin-bottom: 10px;
}

h2 {
    text-align: left;
    font-family: semplicitapro, sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 26pt;
    margin-top: 20px;
    margin-bottom: 5px;
}

h3 {
    text-align: left;
    font-family: semplicitapro, sans-serif;
    font-style:normal;
    font-weight: 600;
    font-size: 20pt;
}

img {
    width: 100%;
    display: block;
    margin: 0;
}

p {
    font-family: "IBM Plex Mono", monospace;
    font-weight: 400;
    font-style: normal;
    font-size: 10pt;
    margin: 0;
    text-align: justify;
}

a {
    text-decoration: none;
}

a:link, a:visited, a:active {
    color:black
}

ul {
    list-style-type: disc;
    text-align: left;
    margin: 1%;
    padding-left: 5%;
    font-family: "IBM Plex Mono", monospace;
    font-size: 10pt;
}

code {
    display: block;
    margin: 20px;
    font-family: "IBM Plex Mono", monospace;
    font-weight: 600;
    font-style: normal;
    font-size: 10pt;
    text-align: center;
}

table, th, td{
    width: 100%;
    border: 1px solid;
    text-align: center;
    font-family: "IBM Plex Mono";
    border-collapse: collapse;
}

header {
    background-color: white;
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    padding-top: 20px;
    padding-left: 20px;
    padding-bottom: 10px;
    width: 100%;
    z-index: 2;
}

footer {
    font-family: semplicitapro, sans-serif;
    font-weight: 500;
    font-size: 20pt;
    font-style: normal;
    display: block;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 20px 20px 0 20px;
    height: 50px;
    position: fixed;
    text-align: left;
    background-color: white;
    z-index: 2;
}

#github-icon {
    display: block;
    width: 30px;
    float: right;
}

#footer-name {
    display: inline-block;
}

.homepage_container {
    display: grid;
    margin: 0pt;
    grid-template-columns: auto;
}

.project_button {
    padding: 0;
    border: none;
    background-color: transparent;
    font-weight: 400;
    font-size: 10pt;
    cursor: pointer;
    display: inline-block;
    appearance: none;
}

.project_button_click {
    font-weight: 600;
}

.project_button:hover{
    font-weight: 600;
}

.navigation {
    font-size: 10pt;
    font-family: semplicitapro, sans-serif;
    font-weight: 400;
    position: fixed;
    width: 200px;
    left: 20px;
    top: 100px;
    z-index: 2;
}

.homepage_project {
    position: relative;
    display: block;
}

.project_dropdown_content{
    margin-left: 5%;
    margin-bottom: 0;
    max-height: 0px;
    overflow: hidden;
    transition: 0.5s;
}

.project_dropdown_content a:hover {
    font-weight: 600;
}

.project_dropdown_content a{
    display: block;
}

.homepage_about:hover {
    font-weight: 600;
}

.show {
    max-height: 200px;
    margin-bottom: 5%;
    margin-top: 2%;
}

.fade-in-image {
    animation: fadeIn 3s;
    -webkit-animation: fadeIn 3s;
    -moz-animation: fadeIn 3s;
    -o-animation: fadeIn 3s;
    -ms-zoom-animation: fadeIn 3s;
}

.thumbnail_header h3{
    text-align: center;
    font-family: "IBM Plex Mono", monospace;
}

.content_container {
    display: block;
    position: relative;
    padding-top: 100px;
    width: 60vw;
    margin-left: auto;
    margin-right: auto;
    z-index: 0;
}

.burger-menu{
    display: none;
    z-index: 2;
}

#burger-background {
    display: block;
    visibility: hidden;
    opacity: 0;
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color: white;
    transition: opacity 0.2s ease, visibility 0.4s ease;
    z-index: 1;
}

@keyframes fadeIn {
    0% {
        opacity: 0%;
    }
    100% {
        opacity: 100%;
    }
}

.about_container {
    display: grid;
    grid-template-columns: 50% 50%;
    padding-top: 50px;
    padding-bottom: 50px;
}

.about_description {
    position: static;
    margin: 30px 30px 30px 30px;
    text-align: justify;
    width: 30vw;
    height: 30vw;
}

#about_image {
    width: 30vw;
    margin-left: auto;
    margin-top: 30px;
}

#about_paragraph {
    font-size: 1.4vw;
}

.project1-hyperlink {
    font-weight: 600;
}

.project1-home:hover {
    font-weight: 600;
}

.project1-nav-container {
    display: block;
    position: fixed;
    font-size: 10pt;
    top: 30px;
    left: 30px;
}

.project1-body-container {
    display: grid;
    grid-template-columns: auto;
}

.project1-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 800px;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 50px;
    z-index: 0;
}

#project1-header h1{
    text-align: center;
}

#project1-formula-buttons {
    display: none;
}

.project1-image {
    margin-top: 30px;
    margin-bottom: 30px;
}

#project1-rock-img {
    width: 100px;
    height: auto;
    display: block;
    margin-right: auto;
    margin-left: auto;
}

@media screen and (width <= 1100px) {

    h1 {
        font-size: 1.6em;
    }

    footer {
        left: 0;
        right: 0;
    }

    /*Home page mobile and tablet screen*/
    .homepage_container {
        grid-template-columns: auto;
    }

    .homepage_header {
        width: 100%;
        position: fixed;
        top: 25px;
        z-index: 1;
    }

    .navigation {
        top: 60px;
        visibility: hidden;
        opacity: 0;
        transition: opacity 0.2s ease, visibility 0.4s ease;
        z-index: 2;
    }

    .navigation.active {
        visibility: visible;
        opacity: 1;
        transition-delay: 0.6s;
    }

    .content_container {
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 95%;
        margin-top: 20vh;
    }

    .thumbnail_header h3 {
        font-size: 1.2em;
    }
    .burger-menu {
        display: block;
        position: fixed;
        width: 20px;
        height: 20px;
        top: 25px;
        right: 20px;
        z-index: 2;
    }

    .burger-menu a {
        text-decoration: none;
    }

    .burger-menu.active .burger-icon {
        opacity: 0%;
    }

    #burger-background.active{
        visibility: visible;
        opacity: 1;
    }

    .burger-menu.active .cross-icon {
        opacity: 100%;
        transition-delay: 0.6s;
    }

    .burger-menu:not(.active) .burger-icon {
        transition-delay: 0.6s;
    }

    .burger-menu:hover {
        cursor: pointer;
    }

    .burger-icon {
        position: absolute;
        left: 0px;
        transition: opacity 0.5s ease-in-out;
    }

    .cross-icon {
        position: absolute;
        left: 0px;
        opacity: 0;
        transition: opacity 0.5s ease-in-out;
    }

    .burger-line {
        display: block;
        position: relative;
        background-color: black;
        width: 20px;
        height: 3px;
        margin: 0 auto 5px auto;
    }

    .cross-line {
        display: block;
        position: absolute;
        top: 8px;
        background-color: black;
        width: 20px;
        height: 3px;
        transform-origin: center;
    }

    .cross-line:first-child {
        transform: rotate(45deg);
    }

    .cross-line:last-child {
        transform: rotate(-45deg);
    }

    /*Project1 Mobile and tablet screen*/

    code {
        overflow-wrap: break-word;
        margin: 20px 5px 20px 5px;
    }

    .project1-nav-container {
        display: none;
    }

    .project1-body-container {
        margin: 0;
    }

    .project1-content {
        width: 100%;
    }

    .project1-content h2 {
        font-size: 1.4em;
    }

    #project1-header {
        width: auto;
        width: auto;
    }

    #project1-header h1{
        text-align: left;
    }

    #project1-table {
        display: none;
    }

    #project1-formula-buttons {
        display: block;
        
    }

    .mathjax {
        font-size: 0.8em;
    }

    .project1-formula-button {
        display: inline-block;
        background-color: white;
        padding: 10px 0 10px 0;
        width: 200px;
        margin-bottom: 5px;
        border: 2px solid;
        font-family: "IBM Plex Mono", monospace;
    }

    .project1-formula-button:hover {
        cursor: pointer;
    }

    .project1-formula-content {
        max-height: 0px;
        font-size: 0.75em;
        overflow-wrap: break-word;
        overflow: hidden;
        transition: 1s ease;
    }

    .show_formula {
        max-height: 200px;
        margin-top: 15px;
        margin-bottom: 20px;
    }

    /* about page */
    .about_container {
        grid-template-columns: auto;
    }

    #about_image {
        margin: auto;
        width: 100%;
    }

    .about_description {
        width: 100%;
        height: 100%;
        margin: 20px 0 0 0;
    }

    #about_paragraph {
        font-size: 0.8em;
    }
}

